config-root/namespaces/jx-staging/nodeapp3/nodeapp3-nodeapp3-deploy.yaml
# Source: nodeapp3/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nodeapp3-nodeapp3
  labels:
    draft: draft-app
    chart: "nodeapp3-0.0.2"
    gitops.jenkins-x.io/pipeline: 'namespaces'
  annotations:
    meta.helm.sh/release-name: 'nodeapp3'
    wave.pusher.com/update-on-config-change: 'true'
  namespace: jx-staging
spec:
  selector:
    matchLabels:
      app: nodeapp3-nodeapp3
  replicas: 1
  template:
    metadata:
      labels:
        draft: draft-app
        app: nodeapp3-nodeapp3
    spec:
      serviceAccountName: nodeapp3-nodeapp3
      containers:
        - name: nodeapp3
          image: "gcr.io/compute-project-183119/nodeapp3:0.0.2"
          imagePullPolicy: IfNotPresent
          envFrom: null
          ports:
            - name: http
              containerPort: 8080
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          resources:
            limits:
              cpu: 400m
              memory: 256Mi
            requests:
              cpu: 0.1
              memory: 128Mi
      terminationGracePeriodSeconds:
      imagePullSecrets:
